--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -5,4 +5,12 @@ body {
 #lines-container {
 	width: 100%;
 	height: 100%;
+
+	font-family: monospace;
+	font-size: 15px;
+}
+
+.line {
+	user-select: none;
+	padding: 5px;
 }
