--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -15,3 +15,9 @@ body {
 	user-select: none;
 	padding: 5px;
 }
+
+.math-component-group {
+	height: max-content;
+	display: flex;
+	align-items: center;
+}
