--- a/stylesheets/cursors.css
+++ b/stylesheets/cursors.css
@@ -1,9 +1,9 @@
 .cursor {
-	position: absolute;
+	position: relative;
 	width: 1px;
 	height: 15px;
 	box-sizing: border-box;
-	background-color: black;
+	border-right: 2px solid black;
 }
 
 .cursor:not(.blink-on) {
