--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -2,16 +2,16 @@ body {
 	margin: 0px;
 }
 
-#lines-container {
+#document-container {
+	cursor: text;
 	width: 100%;
 	height: 100%;
 
-	font-family: monospace;
+	font-family:'Courier New', Courier, monospace;
 	font-size: 15px;
 }
 
 .line {
-	cursor: text;
 	user-select: none;
 	padding: 5px;
 }
