--- a/stylesheets/cursors.css
+++ b/stylesheets/cursors.css
@@ -1,7 +1,7 @@
 .cursor {
 	position: relative;
 	width: 1px;
-	height: 15px;
+	height: 1em;
 	box-sizing: border-box;
 	border-right: 2px solid black;
 }
