added height limit for autocomplete dropdown

--- a/stylesheets/cursors.css
+++ b/stylesheets/cursors.css
@@ -20,6 +20,8 @@
 	position: absolute;
 	border: 1px solid grey;
 	background-color: white;
+	max-height: 100px;
+	overflow-y: scroll;
 }
 #autocomplete:empty {
 	display: none;
