improved scrollbar styling

--- a/stylesheets/cursors.css
+++ b/stylesheets/cursors.css
@@ -21,7 +21,7 @@
 	border: 1px solid grey;
 	background-color: white;
 	max-height: 100px;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 #autocomplete:empty {
 	display: none;
