--- a/stylesheets/tabs.css
+++ b/stylesheets/tabs.css
@@ -14,6 +14,9 @@
 	padding-right: 7px;
 	font-size: 13px;
 }
+.tab:not(:last-child) {
+	border-right: 2px solid rgb(200, 200, 200);
+}
 .tab:not(#active-tab):hover {
 	background-color: rgb(230, 230, 230);
 }
