--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -25,6 +25,7 @@ body {
 	min-height: 1em;
 	display: flex;
 	align-items: center;
+	flex-wrap: wrap;
 }
 .math-component-group {
 	justify-content: center;
