fixed words being split when line breaking
The main change here is changing MathComponentGroup.render; instead of rendering each component and putting it all in a <span>, it now renders each word (a group of several components) and puts all the rendered words in a <span>.

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -21,7 +21,7 @@ body {
 	padding: 5px;
 }
 
-.math-component-group, .line {
+.math-component-group, .line, .word {
 	min-height: 1em;
 	display: flex;
 	align-items: center;
